# Lynrix

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp
Lunrix/: AUDIT_REPORT.md  build.sh  project.yml
Lunrix/App/: ContentView.swift  Info.plist  LunrixApp.swift
Lunrix/Bridge/: Lynrix-Bridging-Header.h  LynrixCoreBridge.h  LynrixCoreBridge.mm
Lunrix/Components/: AnimatedEquityCurve.swift  CommandPalette.swift  EmptyStateView.swift  GlassPanel.swift  GlowText.swift  LocalizationManager.swift  LunrixTheme.swift  LxTheme.swift  NeonButton.swift  PnlSparkline.swift  RegimeBadge.swift  ThemeManager.swift  ToastNotification.swift  UnifiedStatusBar.swift
Lunrix/Lynrix.xcodeproj/: project.pbxproj
Lunrix/Models/: AllocationIntelligence.swift  AuthManager.swift  EngineSubmodels.swift  ExecutionIntelligence.swift  FirestoreService.swift  KeychainManager.swift  LunrixEngine.swift  MarketRegimeIntelligence.swift  ModelGovernance.swift  NotificationManager.swift  OnboardingManager.swift  ProfileManager.swift  TradeJournal.swift  TradingMode.swift  UserProfile.swift  UserStore.swift  WidgetLayoutManager.swift
Lunrix/Resources/: GoogleService-Info.plist  Lynrix.icns
Lunrix/Resources/en.lproj/: Localizable.strings
Lunrix/Views/: AIDashboardView.swift  AllocationIntelligenceView.swift  AuthGateView.swift  ChaosControlView.swift  DashboardView.swift  DiagnosticsView.swift  ExecutionIntelligenceView.swift  IncidentCenterView.swift  LogPanelView.swift  MLDiagnosticsView.swift  MarketRegimeCenterView.swift  MergedViews.swift  ModelGovernanceView.swift  OnboardingView.swift  OrderBookView.swift  OrderStateMachineView.swift  PortfolioView.swift  RLTrainingView.swift  RegistrationView.swift  ReplayControlView.swift  RiskCommandCenterView.swift  SettingsView.swift  SignalsView.swift  StrategyPerformanceView.swift  StrategyResearchView.swift  SystemMonitorView.swift  TradeReviewStudioView.swift  TradeTapeView.swift  VarDashboardView.swift
_legacy_BybitTrader/: QUICKSTART.md  README.md  build.sh  project.yml
_legacy_BybitTrader/App/: BybitTrader.entitlements  BybitTraderApp.swift  ContentView.swift  Info.plist
_legacy_BybitTrader/Bridge/: BybitTrader-Bridging-Header.h  TradingCoreBridge.h  TradingCoreBridge.mm
_legacy_BybitTrader/BybitTrader.xcodeproj/: project.pbxproj
_legacy_BybitTrader/Models/: KeychainManager.swift  TradingEngine.swift
_legacy_BybitTrader/Views/: AIDashboardView.swift  DashboardView.swift  DiagnosticsView.swift  LogPanelView.swift  MLDiagnosticsView.swift  OrderBookView.swift  PortfolioView.swift  SettingsView.swift  SignalsView.swift  StrategyPerformanceView.swift  SystemMonitorView.swift  TradeTapeView.swift
docs/: REFACTORING_PLAN.md  STAGE1_STAGE2_IMPL.md  STAGE1_V2.md  STAGE3_MARKET_DATA_CORRECTNESS.md  STAGE4_HOT_PATH_CLEANUP.md  STAGE5_SEMANTIC_TYPE_SAFETY.md  STAGE6_CONTROL_PLANE.md  TECHNICAL_DOCUMENTATION.md  UI_PERFORMANCE_AUDIT.md  V2_ARCHITECTURE.md
logs/: features_1772651029917.csv  features_1772651651283.csv  features_1772651811723.csv  features_1772651941852.csv  features_1772652168860.csv  features_1772652394553.csv  features_1772652586427.csv  features_1772653202705.csv  features_1772659702064.csv  pnl_1772651029917.csv  pnl_1772651651283.csv  pnl_1772651811723.csv  pnl_1772651941852.csv  pnl_1772652168860.csv  pnl_1772652394553.csv  pnl_1772652586427.csv  pnl_1772653202705.csv  signals_1772651029917.csv  signals_1772651651283.csv  signals_1772651811723.csv  signals_1772651941852.csv  signals_1772652168860.csv  signals_1772652394553.csv  signals_1772652586427.csv  signals_1772653202705.csv  signals_1772659702064.csv  trades_1772653202705.csv
logs/session_1773695744089/: features.csv  orderbook.csv  orders.csv  pnl.csv  predictions.csv  regimes.csv  signals.csv
ml/: requirements.txt  train_model.py
scripts/: isolate_cores.sh
src/analytics/: feature_importance.h  strategy_health.h  strategy_metrics.h
src/app/: application.h  reconciliation.inl  strategy_pipeline.inl  timer_manager.inl  ui_publisher.inl
src/backtesting/: backtest_engine.h  backtester.h
src/bridge/: trading_core_api.cpp  trading_core_api.h  ui_snapshot.h
src/config/: config_loader.h  types.h
src/core/: clock_source.h  hot_path.h  instrument_manager.h  market_data.h  memory_policy.h  strong_types.h  system_control.h
src/execution_engine/: order_state_machine.h  paper_fill_simulator.h  smart_execution.h
src/feature_engine/: advanced_feature_engine.h  feature_engine.h  simd_indicators.h
src/metrics/: latency_histogram.h
src/model_engine/: accuracy_tracker.h  coreml_inference.h  gru_model.h  model_engine.h  onnx_inference.h
src/monitoring/: blackbox_recorder.h  chaos_engine.h  deterministic_replay.h  hdr_histogram.h  perf_signpost.h  system_monitor.h  watchdog.h
src/networking/: ws_manager.h  ws_trade_client.h
src/orderbook/: orderbook.h  orderbook_v3.h
src/persistence/: async_writer.h  research_recorder.h
src/portfolio/: portfolio.h
src/regime/: regime_detector.h
src/rest_client/: rest_client.h
src/risk_engine/: enhanced_risk_engine.h  risk_engine.h  var_engine.h
src/rl/: ppo_actor_critic.h  ppo_sac_hybrid.h  rl_optimizer.h  safe_online_trainer.h
src/strategy/: adaptive_position_sizer.h  adaptive_threshold.h  fill_probability.h
src/trade_flow/: trade_flow_engine.h
src/utils/: arena_allocator.h  clock.h  fast_double.h  hmac.h  lockfree_pipeline.h  memory_pool.h  ring_buffer.h  spinlock.h  thread_affinity.h  tsc_clock.h
src/ws_client/: ws_client.h
tests/: bench_execution.cpp  bench_features.cpp  bench_orderbook_v3.cpp  bench_rl.cpp  bench_stage6_control.cpp  bench_tsc.cpp  fuzz_orderbook_parser.cpp  test_ai_modules.cpp  test_all_modules.cpp  test_chaos_engine.cpp  test_comprehensive.cpp  test_config_persistence.cpp  test_deterministic_replay.cpp  test_order_state_machine.cpp  test_orderbook.cpp  test_orderbook_v3.cpp  test_ppo_sac_hybrid.cpp  test_stage2_integration.cpp  test_stage3_md_correctness.cpp  test_stage4_hot_path.cpp  test_stage5_semantic_types.cpp  test_stage6_system_control.cpp  test_strong_types.cpp
(+3 files in other folders)
